# exercises

./: README.md
json-log-parsing/dean-karn/: Cargo.toml
json-log-parsing/dean-karn/benches/: bench.rs
json-log-parsing/dean-karn/src/: exercise.rs  lib.rs
json-log-parsing/skeleton/: Cargo.toml  README.md
json-log-parsing/skeleton/benches/: bench.rs
json-log-parsing/skeleton/src/: lib.rs
skeleton/: README.md
