[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
edition = "2018"
name = "skeleton"
version = "0.1.0"

[[bench]]
harness = false
name = "bench"

[[bin]]
name = "skeleton"
path = "src/bin/main.rs"

[dependencies]
flate2 = "1.0.13"
serde_json = "1.0.42"

[dependencies.serde]
features = ["derive"]
version = "1.0.103"

[dev-dependencies]
criterion = "0.3.0"

[lib]
name = "skeleton"
path = "src/lib.rs"
[profile.dev]
codegen-units = 4

[profile.release]
codegen-units = 1
debug = false
lto = true
